feat: implemented resume draft v1

--- a/resume.html
+++ b/resume.html
@@ -62,6 +62,7 @@
             Graduate Certificate in Computer Science
           </div>
           <div class="school__name">Harvard University</div>
+          <div class="school__location">Cambridge, MA</div>
           <div class="school__range">2018 - 2022</div>
         </div>
         <div class="school">
@@ -69,6 +70,7 @@
             Graduate Certificate in Computer Science
           </div>
           <div class="school__name">Stanford University</div>
+          <div class="school__location">Stanford, CA</div>
           <div class="school__range">2019</div>
         </div>
         <div class="school">
@@ -77,6 +79,8 @@
           </div>
           <div class="school__name">University of California Los Angeles</div>
           <div class="school__range">2019</div>
+          <div class="school__location">Los Angeles, CA</div>
+
         </div>
         <div class="school">
           <div class="school__program">
@@ -84,6 +88,8 @@
           </div>
           <div class="school__name">University of California San Diego</div>
           <div class="school__range">2018 - 2019</div>
+          <div class="school__location">La Jolla, CA</div>
+
         </div>
         <div class="school">
           <div class="school__program">
@@ -91,6 +97,8 @@
           </div>
           <div class="school__name">University of Virginia</div>
           <div class="school__range">2014 - 2017</div>
+          <div class="school__location">Charlottesville, VA</div>
+
         </div>
         <div class="school">
           <div class="school__program">
@@ -98,6 +106,7 @@
           </div>
           <div class="school__name">Green River College</div>
           <div class="school__range">2011 - 2014</div>
+          <div class="school__location">Auburn, WA</div>
         </div>
       </div>
       <div class="course-work">
@@ -114,32 +123,35 @@
           <li>Immigration Law</li>
           <li>Commerce Law</li>
           <li>Perspective Drawing</li>
+          <li>Google Career Certificate in IT Support</li>
+          <li>Associate Android Developer Certification</li>
+          <li>Completed over 40 online courses in Data Science, Computer Science, Engineering and Design</li>
         </ul>
       </div>
       <div class="experience">
         <h1>Professional Experience</h1>
         <div class="job">
-          <div class="job__title">Freelancer</div>
+          <div class="job__title">Multidisciplinary Freelancer</div>
           <div class="job__company">Self-Employed</div>
-          <div class="job__range">2021 - Present</div>
+          <div class="job__range">2020 - Present</div>
           <div class="job__location">Remote</div>
           <ul class="job__highlights">
             <li>
-              Exhibition Representative for companies in XR, Design Software,
-              Precision Farming,
+              Provide Vegas-based Exhibition Representative services for companies in XR, Home Security, Flooring, Power Tools, Agricultural Robotics and Precision Farming.
             </li>
             <li>
-              Built website, web | Android | Alexa apps for companies in
+              Build websites, Web | Android | Alexa apps for companies in
               education, government, construction, smart home, art, retail, and
-              agriculture
+              agriculture.
             </li>
             <li>
-              Provided digital marketing and built IT infrastructures for
-              several manufacturing companies
+              Provide IT infrastructures, digital marketing and localization services for several manufacturing companies
             </li>
             <li>
-              Self-taught handyman for pool maintenance services, electrician
-              services and PC-building services.
+              Self-taught hobbyist handyman for pool maintenance, electrician, carpentry, network-repair, home automation and PC-building services.
+            </li>
+            <li>
+              Veteran E-commerce developer and marketer including Shopify, WordPress and WooCommerce and Amazon. HubSpot Developer, Solution Provider, Salesforce Developer, Google Developer.
             </li>
           </ul>
         </div>
@@ -158,7 +170,7 @@
               its day-to-day operation
             </li>
             <li>
-              Oversee the omni-channel digital marketing strategy for the studio
+              Build and manage the omni-channel digital marketing including web, social media, app and POS for concerts.
             </li>
           </ul>
         </div>
@@ -169,10 +181,18 @@
           <div class="job__location">Las Vegas, NV</div>
           <ul class="job__highlights">
             <li>
-              Co-founded the Vegas-based parent company that owns a hair salon
+              Co-found the Vegas-based parent company that owns a hair salon
               and a massage salon
             </li>
-            <li>TODO</li>
+            <li>
+              Create and manage omni-channel marketing including Website, GroupOn, Google, Facebook, NextDoor and other local channels
+            </li>
+            <li>
+              Negotiate partnership opportunities with local vendors and providers in hospitality industry
+            </li>
+            <li>
+              Provide business management, financial reporting, invoicing and accounting services.
+            </li>
           </ul>
         </div>
         <div class="job">
@@ -183,19 +203,15 @@
           <div class="job__range">2022 - Present</div>
           <div class="job__location">Las Vegas, NV</div>
           <ul class="job__highlights">
-            <li>Save from bankruptcy</li>
-            <li>Harvard Nevada official venue</li>
-            <li>TODO</li>
-          </ul>
-        </div>
-        <div class="job">
-          <div class="job__title">Shopify Developer</div>
-          <div class="job__company">Self-Employed</div>
-          <div class="job__range">2022 - Present</div>
-          <div class="job__location">location</div>
-          <ul class="job__highlights">
-            <li>TODO</li>
-            <li>TODO</li>
+            <li>
+              Implemented omni-channel marketing strategies including Web, Google, Social Media, Local Event channels, Delivery platforms that drive triple digits month-to-month growth, saving the business from operational insolvency
+            </li>
+            <li>
+              Created menus and devised pricing strategies that worked well for all sales channels
+            </li>
+            <li>
+              Negotiates catering and partnership opportunities with local organizations, promoting the restaurant to be Harvard Nevada Club's official lunch venue
+            </li>
           </ul>
         </div>
         <div class="job">
@@ -205,52 +221,38 @@
           <div class="job__location">Las Vegas, NV</div>
           <ul class="job__highlights">
             <li>
-              Oversee the day-to-day operation for the photography studio,
+              Oversaw the day-to-day operation for the photography studio,
               including photo lessons, photo contribution and project
               partnerships
             </li>
             <li>
               Planned and led several photo tours in central and northern Alaska
             </li>
-          </ul>
-        </div>
-
-        <div class="job">
-          <div class="job__title">Sales Consultant</div>
-          <div class="job__company">FJDynamics</div>
-          <div class="job__range">2022</div>
-          <div class="job__location">Las Vegas, NV</div>
-          <ul class="job__highlights">
-            <li>what did I do</li>
-            <li>what did I do</li>
+            <li>
+              Provided IT consulting services for companies in California, Nevada and Massachusetts.
+            </li>
           </ul>
         </div>
         <div class="job">
           <div class="job__title">Co-Founder | Lead Developer</div>
           <div class="job__company">reRoot</div>
-          <div class="job__range">Oct 2021 - May 2022</div>
+          <div class="job__range">2021 - 2022</div>
           <div class="job__location">Cambridge, MA</div>
           <ul class="job__highlights">
             <li>
-              reRoot makes migration easier for all. As social, economic, and
-              climate landscapes change, individuals and families tend to move
-              to where they can find a suitable community. Yet, moving is a huge
-              risk that not many can afford to take, and not everyone is aware
-              of what opportunities may even exist. Having access to digestible
-              migration-related information is especially challenging for
-              minority and immigrant communities. Meanwhile, there is a spatial
-              mismatch between where services and organizations are located and
-              where minority and immigrant communities reside. reRoot is a
-              decision-making support platform that uses the US Census data to
+              reRoot is a decision-making support platform that uses the US Census data to
               assist minority and disenfranchised communities within the United
               States to migrate and make more informed migration decisions
-              outside of existing networks and word-of-mouth. Our team formed in
-              2021 as part of The Opportunity Project (at) Harvard, a data
-              sprint hosted by the metaLAB (at) Harvard and the U.S. Census
-              Bureau. We shared a common interest in developing a product to
-              meet the present-day needs of under-served communities. Currently,
-              we are the finalist team at the 2022 MIT IDEAS Social Innovation
-              Challenge and aim to bring global impact.
+              outside of existing networks and word-of-mouth.
+            </li>
+            <li>
+              Formed in 2021 as part of The Opportunity Project (at) Harvard
+            </li>
+            <li>
+              2022 MIT IDEAS Social Innovation Challenge Finalist.
+            </li>
+            <li>
+              Helped design the UI, conducted data collection and analysis, and shipped the web app with NextJS.
             </li>
           </ul>
         </div>
@@ -264,7 +266,9 @@
             <li>
               Designed, built and maintained a website for the local magazine
             </li>
-            <li>Oversaw editor and graphical designer recruiting operation</li>
+            <li>
+              Oversaw editor and graphical designer recruiting operation
+            </li>
           </ul>
         </div>
         <div class="job">
@@ -287,7 +291,7 @@
           </ul>
         </div>
         <div class="job">
-          <div class="job__title">Independent Contractor</div>
+          <div class="job__title">Independent Sourcing Contractor</div>
           <div class="job__company">
             Fucida Lighting Electrical Equipment Co. Ltd
           </div>
@@ -296,30 +300,34 @@
           <ul class="job__highlights">
             <li>Co-founded the E-commerce department</li>
             <li>
-              Developed independent E-Commerce site for Fucida on Alibaba.
+              Developed independent B2B E-Commerce website for Fucida and created in-house tools to help with SEO.
             </li>
             <li>
-              Sold older inventory for Fucida and facilitated communications to
-              secure deals.
+              Negotiated contracts with online and offline suppliers, dealers, including conducting marketing research, preparing proposals and counter proposals, and formulating policies to improve company's economic position.
             </li>
             <li>
-              Located supplies for Taobao store by communicating with B2B
-              vendors.
+              Develop working relationships with new suppliers by performing preliminary research, meeting with representatives, verifying product availability, and finalizing terms of sale.
             </li>
-            <li>what did I do</li>
-            <li>what did I do</li>
           </ul>
         </div>
         <div class="job">
-          <div class="job__title">Independent E-Commerce Owner</div>
+          <div class="job__title">Independent E-Commerce Business Owner</div>
           <div class="job__company">Self-Employed</div>
           <div class="job__range">2007 - 2011</div>
           <div class="job__location">Shanghai, China</div>
           <ul class="job__highlights">
-            <li>Participated in the first 3 single's day events on Taobao</li>
             <li>
-              As Menswear Gnious dealer, we reaped a record-breaking 7 million
-              RMB sales during the 2nd single's day event
+              Veteran E-commerce founder in 7 different industries including online-gaming, women's clothing, women's shoes, women's accessories, menswear,
+            </li>
+            <li>
+              As Menswear Gnious dealer, we reaped a record-breaking 11 million
+              RMB sales during the 2nd single's day event.
+            </li>
+            <li>
+              Participated in the first 3 single's day events on Taobao with one of our brands among the first group of companies to join Tmall.
+            </li>
+            <li>
+              Developed in-house SEO, marketing and automation tools with other freelance developers to sustain multi-brand growth
             </li>
           </ul>
         </div>
@@ -448,6 +456,8 @@
             <li data-weight="8">Django</li>
             <li data-weight="6">GraphQL</li>
             <li data-weight="5">MongoDB</li>
+            <li data-weight="4">AWS</li>
+            <li data-weight="8">Firebase</li>
             <li data-weight="5">HTML5</li>
             <li data-weight="2">MeteorJS</li>
             <li data-weight="6">Phaser</li>
