feat: changed colors of the soul formatting

--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
         </p>
         <p>
           If I gave an answer, my colors would be a
-          <span class="yellow"> muted yellow, showing reserved optimism</span>,
-          a splash of <span class="grey">grey showing sadness</span>, and most
-          of all, a
-          <span class="red"
-            >glowing red, reflecting an intense desire to feel valuable and
+          <span class="yellow"> muted yellow</span>, showing <span class="yellow">reserved optimism</span>,
+          a splash of <span class="grey">grey</span> showing <span class="grey">sadness</span>, and most
+          of all, a <span class="red">glowing red</span>, reflecting an <span class="red">intense desire to feel valuable and
             alive</span
           >.
         </p>
