fix: index.html passed validator

--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!--
-    Requirements:
-    Your personal home page.
-
-    This page shall contain:
-
-    x Your name --real or fictitious (e.g., for FERPA reasons)
-    x A photo of you --real or fictitious (e.g., for FERPA reasons)
-    x A link to your resume
-    x A link to your short biography
- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -38,15 +27,16 @@
         </p>
         <p>
           If I gave an answer, my colors would be a
-          <span class="yellow"> muted yellow</span>, showing <span class="yellow">reserved optimism</span>,
-          a splash of <span class="grey">grey</span> showing <span class="grey">sadness</span>, and most
-          of all, a <span class="red">glowing red</span>, reflecting an <span class="red">intense desire to feel valuable and
-            alive</span
-          >.
+          <span class="yellow"> muted yellow</span>, showing
+          <span class="yellow">reserved optimism</span>, a splash of
+          <span class="grey">grey</span> showing
+          <span class="grey">sadness</span>, and most of all, a
+          <span class="red">glowing red</span>, reflecting an
+          <span class="red">intense desire to feel valuable and alive</span>.
         </p>
       </div>
       <div class="profile">
-        <a class="name" href="./bio.html" >Thomas Zhang 張宇軒<a/>
+        <a class="name" href="./bio.html">Thomas Zhang 張宇軒</a>
         <img
           src="./assets/alaska.jpg"
           alt="The profile picture of Thomas Zhang"
