fix: removed duplicate tags in resume, passed html

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,6 @@
           <div class="school__name">University of California Los Angeles</div>
           <div class="school__range">2019</div>
           <div class="school__location">Los Angeles, CA</div>
-
         </div>
         <div class="school">
           <div class="school__program">
@@ -89,7 +88,6 @@
           <div class="school__name">University of California San Diego</div>
           <div class="school__range">2018 - 2019</div>
           <div class="school__location">La Jolla, CA</div>
-
         </div>
         <div class="school">
           <div class="school__program">
@@ -98,7 +96,6 @@
           <div class="school__name">University of Virginia</div>
           <div class="school__range">2014 - 2017</div>
           <div class="school__location">Charlottesville, VA</div>
-
         </div>
         <div class="school">
           <div class="school__program">
@@ -125,7 +122,10 @@
           <li>Perspective Drawing</li>
           <li>Google Career Certificate in IT Support</li>
           <li>Associate Android Developer Certification</li>
-          <li>Completed over 40 online courses in Data Science, Computer Science, Engineering and Design</li>
+          <li>
+            Completed over 40 online courses in Data Science, Computer Science,
+            Engineering and Design
+          </li>
         </ul>
       </div>
       <div class="experience">
@@ -137,7 +137,9 @@
           <div class="job__location">Remote</div>
           <ul class="job__highlights">
             <li>
-              Provide Vegas-based Exhibition Representative services for companies in XR, Home Security, Flooring, Power Tools, Agricultural Robotics and Precision Farming.
+              Provide Vegas-based Exhibition Representative services for
+              companies in XR, Home Security, Flooring, Power Tools,
+              Agricultural Robotics and Precision Farming.
             </li>
             <li>
               Build websites, Web | Android | Alexa apps for companies in
@@ -145,13 +147,18 @@
               agriculture.
             </li>
             <li>
-              Provide IT infrastructures, digital marketing and localization services for several manufacturing companies
+              Provide IT infrastructures, digital marketing and localization
+              services for several manufacturing companies
             </li>
             <li>
-              Self-taught hobbyist handyman for pool maintenance, electrician, carpentry, network-repair, home automation and PC-building services.
+              Self-taught hobbyist handyman for pool maintenance, electrician,
+              carpentry, network-repair, home automation and PC-building
+              services.
             </li>
             <li>
-              Veteran E-commerce developer and marketer including Shopify, WordPress and WooCommerce and Amazon. HubSpot Developer, Solution Provider, Salesforce Developer, Google Developer.
+              Veteran E-commerce developer and marketer including Shopify,
+              WordPress and WooCommerce and Amazon. HubSpot Developer, Solution
+              Provider, Salesforce Developer, Google Developer.
             </li>
           </ul>
         </div>
@@ -170,7 +177,8 @@
               its day-to-day operation
             </li>
             <li>
-              Build and manage the omni-channel digital marketing including web, social media, app and POS for concerts.
+              Build and manage the omni-channel digital marketing including web,
+              social media, app and POS for concerts.
             </li>
           </ul>
         </div>
@@ -181,17 +189,20 @@
           <div class="job__location">Las Vegas, NV</div>
           <ul class="job__highlights">
             <li>
-              Co-found the Vegas-based parent company that owns a hair salon
-              and a massage salon
+              Co-found the Vegas-based parent company that owns a hair salon and
+              a massage salon
             </li>
             <li>
-              Create and manage omni-channel marketing including Website, GroupOn, Google, Facebook, NextDoor and other local channels
+              Create and manage omni-channel marketing including Website,
+              GroupOn, Google, Facebook, NextDoor and other local channels
             </li>
             <li>
-              Negotiate partnership opportunities with local vendors and providers in hospitality industry
+              Negotiate partnership opportunities with local vendors and
+              providers in hospitality industry
             </li>
             <li>
-              Provide business management, financial reporting, invoicing and accounting services.
+              Provide business management, financial reporting, invoicing and
+              accounting services.
             </li>
           </ul>
         </div>
@@ -204,13 +215,19 @@
           <div class="job__location">Las Vegas, NV</div>
           <ul class="job__highlights">
             <li>
-              Implemented omni-channel marketing strategies including Web, Google, Social Media, Local Event channels, Delivery platforms that drive triple digits month-to-month growth, saving the business from operational insolvency
+              Implemented omni-channel marketing strategies including Web,
+              Google, Social Media, Local Event channels, Delivery platforms
+              that drive triple digits month-to-month growth, saving the
+              business from operational insolvency
             </li>
             <li>
-              Created menus and devised pricing strategies that worked well for all sales channels
+              Created menus and devised pricing strategies that worked well for
+              all sales channels
             </li>
             <li>
-              Negotiates catering and partnership opportunities with local organizations, promoting the restaurant to be Harvard Nevada Club's official lunch venue
+              Negotiates catering and partnership opportunities with local
+              organizations, promoting the restaurant to be Harvard Nevada
+              Club's official lunch venue
             </li>
           </ul>
         </div>
@@ -229,7 +246,8 @@
               Planned and led several photo tours in central and northern Alaska
             </li>
             <li>
-              Provided IT consulting services for companies in California, Nevada and Massachusetts.
+              Provided IT consulting services for companies in California,
+              Nevada and Massachusetts.
             </li>
           </ul>
         </div>
@@ -240,19 +258,19 @@
           <div class="job__location">Cambridge, MA</div>
           <ul class="job__highlights">
             <li>
-              reRoot is a decision-making support platform that uses the US Census data to
-              assist minority and disenfranchised communities within the United
-              States to migrate and make more informed migration decisions
-              outside of existing networks and word-of-mouth.
+              reRoot is a decision-making support platform that uses the US
+              Census data to assist minority and disenfranchised communities
+              within the United States to migrate and make more informed
+              migration decisions outside of existing networks and
+              word-of-mouth.
             </li>
             <li>
               Formed in 2021 as part of The Opportunity Project (at) Harvard
             </li>
+            <li>2022 MIT IDEAS Social Innovation Challenge Finalist.</li>
             <li>
-              2022 MIT IDEAS Social Innovation Challenge Finalist.
-            </li>
-            <li>
-              Helped design the UI, conducted data collection and analysis, and shipped the web app with NextJS.
+              Helped design the UI, conducted data collection and analysis, and
+              shipped the web app with NextJS.
             </li>
           </ul>
         </div>
@@ -266,9 +284,7 @@
             <li>
               Designed, built and maintained a website for the local magazine
             </li>
-            <li>
-              Oversaw editor and graphical designer recruiting operation
-            </li>
+            <li>Oversaw editor and graphical designer recruiting operation</li>
           </ul>
         </div>
         <div class="job">
@@ -300,13 +316,19 @@
           <ul class="job__highlights">
             <li>Co-founded the E-commerce department</li>
             <li>
-              Developed independent B2B E-Commerce website for Fucida and created in-house tools to help with SEO.
+              Developed independent B2B E-Commerce website for Fucida and
+              created in-house tools to help with SEO.
             </li>
             <li>
-              Negotiated contracts with online and offline suppliers, dealers, including conducting marketing research, preparing proposals and counter proposals, and formulating policies to improve company's economic position.
+              Negotiated contracts with online and offline suppliers, dealers,
+              including conducting marketing research, preparing proposals and
+              counter proposals, and formulating policies to improve company's
+              economic position.
             </li>
             <li>
-              Develop working relationships with new suppliers by performing preliminary research, meeting with representatives, verifying product availability, and finalizing terms of sale.
+              Develop working relationships with new suppliers by performing
+              preliminary research, meeting with representatives, verifying
+              product availability, and finalizing terms of sale.
             </li>
           </ul>
         </div>
@@ -317,17 +339,21 @@
           <div class="job__location">Shanghai, China</div>
           <ul class="job__highlights">
             <li>
-              Veteran E-commerce founder in 7 different industries including online-gaming, women's clothing, women's shoes, women's accessories, menswear,
+              Veteran E-commerce founder in 7 different industries including
+              online-gaming, women's clothing, women's shoes, women's
+              accessories, menswear,
             </li>
             <li>
               As Menswear Gnious dealer, we reaped a record-breaking 11 million
               RMB sales during the 2nd single's day event.
             </li>
             <li>
-              Participated in the first 3 single's day events on Taobao with one of our brands among the first group of companies to join Tmall.
+              Participated in the first 3 single's day events on Taobao with one
+              of our brands among the first group of companies to join Tmall.
             </li>
             <li>
-              Developed in-house SEO, marketing and automation tools with other freelance developers to sustain multi-brand growth
+              Developed in-house SEO, marketing and automation tools with other
+              freelance developers to sustain multi-brand growth
             </li>
           </ul>
         </div>
@@ -446,7 +472,7 @@
         </div>
         <div class="frameworks">
           <h2>Frameworks and Tools</h2>
-          <ul class="cloud" role="navigation" aria-label="Word Cloud">
+          <ul class="cloud" aria-label="Word Cloud">
             <li data-weight="7">React</li>
             <li data-weight="9">NextJS</li>
             <li data-weight="4">AngularJS</li>
@@ -494,7 +520,7 @@
             <div class="other__skill">Immigration Law</div>
             <div class="other__skill">Vendor Management</div>
             <div class="other__skill">Travel Management</div>
-          </ul>
+          </div>
         </div>
       </div>
 
