feat: implemented multi-language bio

--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@
           <div class="job__title">Multidisciplinary Freelancer</div>
           <div class="job__company">Self-Employed</div>
           <div class="job__range">2020 - Present</div>
-          <div class="job__location">Remote</div>
+          <div class="job__location">Hybrid</div>
           <ul class="job__highlights">
             <li>
               Provide Vegas-based Exhibition Representative services for
