--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <li class="nav-link__home"><a href="/index.html">About Me</a></li>
         <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
         <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+        <li class="nav-link__audio">
+          <audio controls>
+            <source src="./assets/colors-of-the-soul.mp3" type="audio/mp3" />
+          </audio>
+        </li>
       </ul>
     </nav>
     <main>
