fix: fixed index quote padding

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     </nav>
     <main>
       <div class="quote">
-        <p>
-          Close your eyes and ask yourself. What are the colors of your soul?
-        </p>
+        <p>Close your eyes and ask yourself.</p>
+        <p>What are the colors of your soul?</p>
         <p>
           I think the color depends on what you've been through in life and
           what's important to you.
