feat: added print and mobile draft 1

--- a/resume.html
+++ b/resume.html
@@ -31,9 +31,27 @@
     </nav>
 
     <main>
-      <div class="profile">Thomas Zhang 張宇軒</div>
+      <div class="profile">
+        <div class="profile__name">
+          Thomas Zhang 張宇軒
+        </div>
+        <div class="profile__email">
+          mier.cat@mier.cat
+        </div>
+        <div class="profile__number">
+          619-751-2556
+        </div>
+      </div>
       <div class="education">
         <h1>Education</h1>
+        <div class="school">
+          <div class="school__program">
+            Graduate Certificate in GIS
+          </div>
+          <div class="school__name">University of California Los Angeles</div>
+          <div class="school__location">Los Angeles, CA</div>
+          <div class="school__range">Apr 2022 - Current</div>
+        </div>
         <div class="school">
           <div class="school__program">
             Graduate Certificate in Computer Science
@@ -43,19 +61,19 @@
           <div class="school__range">2021 - Current</div>
         </div>
         <div class="school">
-          <div class="school__program">Professional Certification</div>
-          <div class="school__name">Interior Design Institute</div>
-          <div class="school__location">San Francisco, CA</div>
-          <div class="school__range">December 2022 - Current</div>
-        </div>
-        <div class="school">
           <div class="school__program">
             Professional Certificate in Energy Innovation and Emerging
             Technologies
           </div>
           <div class="school__name">Stanford University</div>
           <div class="school__location">Stanford, CA</div>
-          <div class="school__range">September 2022 - Current</div>
+          <div class="school__range">Sep 2022 - Current</div>
+        </div>
+        <div class="school">
+          <div class="school__program">Professional Certification</div>
+          <div class="school__name">Interior Design Institute</div>
+          <div class="school__location">San Francisco, CA</div>
+          <div class="school__range">Dec 2022 - Current</div>
         </div>
         <div class="school">
           <div class="school__program">
@@ -142,23 +160,37 @@
               Agricultural Robotics and Precision Farming.
             </li>
             <li>
-              Build websites, Web | Android | Alexa apps for companies in
-              education, government, construction, smart home, art, retail, and
-              agriculture.
+              Build dozens of websites, Web, cross-platform mobile, Alexa apps for companies in higher education, film, government, construction, smart home, music, retail, and agriculture.
             </li>
             <li>
               Provide IT infrastructures, digital marketing and localization
-              services for several manufacturing companies
+              services for manufacturing companies
             </li>
             <li>
-              Self-taught hobbyist handyman for pool maintenance, electrician,
-              carpentry, network-repair, home automation and PC-building
+              Self-taught hobbyist handyman for pool maintenance, electrician, network-repair, home automation and PC-building
               services.
             </li>
             <li>
               Veteran E-commerce developer and marketer including Shopify,
-              WordPress and WooCommerce and Amazon. HubSpot Developer, Solution
+              WordPress & WooCommerce and Amazon. HubSpot Developer, Solution
               Provider, Salesforce Developer, Google Developer.
+            </li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Cross-plaform FullStack Engineer | CIO</div>
+          <div class="job__company">Vocadian</div>
+          <div class="job__range">2023 - Present</div>
+          <div class="job__location">Cambridge, MA</div>
+          <ul class="job__highlights">
+            <li>
+              Design and build the IT infrastructures (cloud, email, digital marketing) with the founding team.
+            </li>
+            <li>
+              Work with co-founders, product lead and designers to build and maintain websites, front-end, back-end, cross-platform desktop and mobile apps.
+            </li>
+            <li>
+              Work with product lead and designers to actively explore competitors and market trends to identify new opportunities for the company, and to implement new products and features.
             </li>
           </ul>
         </div>
@@ -475,11 +507,14 @@
           <ul class="cloud" aria-label="Word Cloud">
             <li data-weight="7">React</li>
             <li data-weight="9">NextJS</li>
+            <li data-weight="6">Remix</li>
             <li data-weight="4">AngularJS</li>
+            <li data-weight="6">Flutter</li>
             <li data-weight="3">VueJS</li>
             <li data-weight="7">jQuery</li>
             <li data-weight="7">Ruby on Rails</li>
             <li data-weight="8">Django</li>
+            <li data-weight="9">React Native</li>
             <li data-weight="6">GraphQL</li>
             <li data-weight="5">MongoDB</li>
             <li data-weight="4">AWS</li>
@@ -494,7 +529,6 @@
             <li data-weight="7">CSS3</li>
             <li data-weight="2">Tailwind</li>
             <li data-weight="4">Sass</li>
-            <li data-weight="5">React Native</li>
             <li data-weight="8">Android</li>
             <li data-weight="3">iOS</li>
           </ul>
